[package]
name = "tencentcloud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
url = { git = "https://github.com/divinerapier/url", branch = "master" }
serde_json = "1"
serde = "1"
sha2 = "0.9"
hex = "0.4"
hmac = "0.11"
thiserror = "1"
